Fix 'unicode-bidi: plaintext' handling in ComputeInlineBoxPosition

Existing code performs bidi adjustment for 'unicode-bidi: plaintext' only
for the right edge of InlineBoxes. This patch makes it handle both edges
to allow caret to appear at the left edge.

This patch also makes the bidi adjustment code symmetric for left and
right edge handling, so that we can de-duplicate in future refactoring.

Bug: 828657, 771398
Change-Id: I3fd22280327c7186fcfddfb0ba1bb13c4a5dfeff
Reviewed-on: https://chromium-review.googlesource.com/994389
Reviewed-by: Koji Ishii <kojii@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547987}
Former-commit-id: 6a93bb17fb2477de9bddce5c0275f422b1cb1cce